# AI_Chat_Bot

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: config.py
src/db/: base.py  base_class.py  session.py
src/handler/: base.py  chat.py  router.py
src/service/: open_api.py
